--- a/manifest.json
+++ b/manifest.json
@@ -7,17 +7,17 @@
   "description": "A PWA sample that demonstrates the Web Share Target API",
   "icons": [
     {
-      "src": "images/48x48.png",
+      "src": "icons/48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "images/192x192.png",
+      "src": "icons/192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/512x512.png",
+      "src": "icons/512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
